# Climate-Visibility-Project

./: .gitignore  README.md  app_info.txt  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
.github/workflows_stop/: ci.yaml
config/: params.yaml  prediction_schema.yaml  schema.yaml
flask_app/: app.py  requirements.txt  start.sh
flask_app/models/: scaler2.pkl
flask_app/services/: prediction_service.py  weather_service.py
flask_app/static/css/: main.css
flask_app/templates/: home.html
models/: .gitignore
notebooks/: EDA.ipynb  EDA_raw_data.ipynb  Feature_engineering and model training.ipynb  mongodbupload.ipynb
reports/: metrics.json
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: visibility_data.py
src/tests/: test_flask_app.py  test_model.py
src/utils/: main_utils.py
