[project]
name = "Climate-Visibility-Project"
version = "0.1.0"
description = "A project to analyze climate visibility data."
authors = [
    { name = "Tanush Garg", email = "tanushgarg26jul@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }



#$env:MONGODB_URL="mongodb+srv://tanush26jul:Kaliya%40123@cluster0.krz67nr.mongodb.net/"

